# trading_bot

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  test_validators.py
bot/: __init__.py  client.py  logging_config.py  orders.py  validators.py
tests/: test_client.py  test_orders.py  test_validators.py
